--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,11 @@ server:
 spring:
   application:
     name: news-gpt-back
+  config:
+    import: optional:dotenv:.env
+
+openai:
+  api-key: ${OPENAI_API_KEY}
+  model: gpt-3.5-turbo
+  max-tokens: 300
+  temperature: 0.3
