--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
-        <!-- OpenAI 호출용 HTTP 클라이언트 -->
+        <!-- OpenAI -->
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.12.0</version>
+            <groupId>com.openai</groupId>
+            <artifactId>openai-java</artifactId>
+            <version>2.8.0</version>
         </dependency>
         <!-- JSON 직렬화/역직렬화 -->
         <dependency>
