--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,17 @@ spring:
     username: ENC(lBPAGZTtXv7Eov0O6BMY9w==)
     password: ENC(lBPAGZTtXv7Eov0O6BMY9w==)
     driver-class-name: org.mariadb.jdbc.Driver
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 2000
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
+          max-wait: -1ms
 
 openai:
   max-tokens: 400
