--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,11 @@
             <version>2.25.0</version>
             <scope>runtime</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
+<!--            <artifactId>jackson-datatype-hibernate5-jakarta</artifactId>-->
+<!--            <version>2.19.1</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
