fix: application.yml 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,7 @@ spring:
 openai:
   max-tokens: 400
   temperature: 0.3
-  prompt-version: 2  prompt-version: 2
+  prompt-version: 2
 
 logging:
   config: classpath:log4j2.xml
