--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
 <!--            <artifactId>jackson-datatype-hibernate5-jakarta</artifactId>-->
 <!--            <version>2.19.1</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.9.1</version>
+        </dependency>
     </dependencies>
 
     <build>
